:alien: Fixing spacing between social media icons

--- a/huddle-landing-page-with-alternating-feature-blocks-master/styles.css
+++ b/huddle-landing-page-with-alternating-feature-blocks-master/styles.css
@@ -256,7 +256,8 @@ footer>span {
 /* Social Medias */
 
 .social-media {
-  width: 40%;
+  gap: 1rem;
+  width: 50%;
   display: grid;
   padding-top: 5.4rem;
   justify-items: center;
